--- a/IoTNetLyzer/config.json
+++ b/IoTNetLyzer/config.json
@@ -1,6 +1,6 @@
 {
-    "pcap_file_address": "./ethercat.pcap",
-    "output_file_path": "./",
+    "pcap_file_address": "C:/Users/moeinsh/Documents/Z-WaveNetLyzer/AeoTecDoorbell6_Inclusion.csv",
+    "output_file_path": "C:/Users/moeinsh/Documents/Z-WaveNetLyzer/output.csv",
     "label": "Benign",
     "read_packets_count_value_log_info": 10000,
     "interface_name": "eth0",
